@@ -1,7 +1,7 @@
 @c -*- texinfo -*- vim: ft=texinfo tw=100 nocin nosi
 @c =========================================================================
 @c
-@c @(#) $Id: bugs.texi,v 0.9.2.2 2007/04/02 12:01:46 brian Exp $
+@c @(#) $Id: bugs.texi,v 0.9.2.3 2007/04/02 13:07:55 brian Exp $
 @c
 @c =========================================================================
 @c
@@ -53,11 +53,17 @@
 @c 
 @c =========================================================================
 @c
-@c Last Modified $Date: 2007/04/02 12:01:46 $ by $Author: brian $
+@c Last Modified $Date: 2007/04/02 13:07:55 $ by $Author: brian $
 @c
 @c =========================================================================
 
 @table @code
+@item 002.  2007-04-02T13:04:36+0000
+
+Option handling bug in @file{ldltest}.
+
+@emph{*fixed*} in @command{strxns-0.9.2.6}
+
 @item 001.  2007-04-02T11:52:59+0000
 
 @file{ldl} was not demand loading for 2.6 kernels due to missing MODULE_ALIAS declarations.  Also,
